<resources>
    <string name="app_name">120急救医生版</string>
    
    <string name="app_zhanwei">占位信息</string>

    <!--底部按钮-->
    <string name="back_knowleage">常识</string>
    <string name="back_map">地图</string>
    <string name="back_message">消息</string>
    <string name="back_my">我的</string>

    <!--登录-->
    <string name="login_forget">忘记密码</string>
    <string name="login_user">账号</string>
    <string name="login_pw">密码</string>
    <string name="login_button">登录</string>
    <string name="login_register">注册</string>

    <!--忘记密码-->
    <string name="forget_code">验证码</string>
    <string name="forget_getcode">获取验证码</string>
    <string name="forget_npw">请输入确认密码</string>
    <string name="forget_button">提交</string>
    <string name="forget_user">请输入手机号码</string>
    <string name="forget_pw">请输入密码</string>

    <string name="know_text">默认目录</string>
    <string name="my_basic">基本资料</string>
    <string name="my_jineng">技能</string>
    <string name="my_techang">特长</string>
    <string name="my_shijian">时间</string>
    <string name="my_gongzuo">已完成工作</string>
    <string name="my_logout">退出登陆</string>

    <string name="kmmm_null">暂无数据</string>
    <string name="know_re_on">展开</string>
    <string name="know_re_off">收起</string>
    <string name="yisheng">功能开发中</string>

    <string name="my_name">姓名</string>
    <string name="my_sex">性别</string>
    <string name="my_old">年龄</string>
    <string name="my_phone">电话</string>
    <string name="my_specialty">专业</string>
    <string name="my_hospital">所在医院</string>
    <string name="my_office">所在科室</string>
    <string name="video_time">12:10:00</string>
    <string name="time_dao">到</string>
    <string name="video_loading">视频等待接通中</string>
    
    <string name="setting_cancel">取消</string>
    <string name="setting_complete">完成</string>

    <string name="sick_name">姓名</string>
    <string name="sick_sex">性别</string>
    <string name="sick_old">年龄</string>
    <string name="sick_height">身高</string>
    <string name="sick_weight">体重</string>
    <string name="sick_bloodtype">血型</string>
    <string name="sick_medicalhistory">病史</string>
    <string name="sick_surgeryhistory">手术史</string>
    <string name="sick_builtin">内置物</string>
    <string name="sick_chronic">慢性病</string>
    <string name="sick_allergens">过敏源</string>

    <!--小鱼-->
    <string name="video_sick">患者信息</string>
    <string name="video_location">患者位置</string>
    <string name="video_video">开启摄像头</string>
    <string name="hang_up">挂断</string>
    <string name="switch_camera">切摄像头</string>
    <string name="mute_mic">静音</string>
    <string name="unmute_mic">取消静音</string>
    <string name="switch_speaker_mode">打开听筒模式</string>
    <string name="close_switch_speaker_mode">关闭听筒模式</string>
    <string name="switch_call_module">语音模式</string>
    <string name="close_switch_call_module">退出语音模式</string>
    <string name="start_switch_call_module">已开启通话语音模式</string>
    <string name="switch_call_in">语音通话中</string>

    <string name="hand_up">举手</string>
    <string name="hand_down">取消举手</string>
    <string name="end_speech">结束发言</string>
    <string name="close_video">关闭视频</string>
    <string name="open_video">打开视频</string>
    <string name="call_to">视频通话邀请中&#8230;</string>
    <string name="conf_control_text">会控</string>

    <string name="interaction_text">互动</string>


    <string name="start_record_video">录制</string>
    <string name="end_record_video">录制结束</string>
    <string name="call_video_mute">视频暂停</string>
    <string name="call_no_video">网络不给力，暂时无法接收视频</string>
    <string name="MuteByNoInput">对方未开启视频</string>

    <string name="MuteByUser">对方忙，暂时关闭视频</string>
    <string name="MuteByBWLimit">对方网络不稳定，无法传输视频</string>
    <string name="MuteByConfMgmt">对方视频已被主持人关闭</string>
    <string name="call_video_requesting">视频正在请求中...</string>

    <string name="button_text_record">开始录制</string>
    <string name="button_text_stop">停止录制</string>
    <string name="recording_text_stopped">录制结束</string>
    <string name="recording_text">录制中 </string>
    <string name="recording_text_stopped_nemo_no_space">您的终端存储空间不足，录制失败</string>
    <string name="recording_text_stopped_no_nemo_exist">远端不是终端设备，无法录制</string>
    <string name="recording_text_stopped_expired">本次录制已达最大时长30分钟，录制自动停止</string>
    <string name="recording_text_stopped_account_no_space">您的帐户空间不足，无法录制新的视频</string>
    <string name="third_conf_record_notice">录制完成，录制视频已保存到云会议室管理员的文件夹</string>
    <string name="recording_text_preparing">录制中 00:00:00</string>
    <string name="who_is_recording" formatted="false">%s正在录制</string>
    <string name="recording_non_enetrprise_meeting">云会议室不属于任何，无法录制</string>
    <string name="recording_storage_not_enough">录制的存储空间已满，您无法开始录制。\n请删除已有的录制视频，\n或联系管理员购买更多存储空间。</string>
    <string name="recording_expire">录制失败，您的尚未开通录制服务或服务已过期，\n请联系管理员购买。</string>
    <string name="recording_fail">录制失败</string>
    <string name="recording_service_unavailable">录制服务暂时不可用，请稍候再试</string>
    <string name="someone_is_recording">其他用户已发起了录制，您无法重复录制</string>
    <string name="record_exceed_concurrency_limit">已达最大录制方数，不能发起录制</string>
    <string name="h323gw_no_resource">当前在线呼叫数已达网关服务上限，请稍候重试</string>
    <string name="service_reach_max_count">当前在线呼叫数已达服务上限，请稍候再试</string>
    <string name="service_expired">服务已过期，请管理员更新服务许可证</string>
    <string name="no_operation_permission">您无操作权限</string>
</resources>
