<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/sick"
        layout="@layout/common_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/sick_name"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/sick_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/sick_sex"/>
                <TextView
                    android:id="@+id/sick_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/sick_old"/>
                <TextView
                    android:id="@+id/sick_old"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/sick_height"/>
                <TextView
                    android:id="@+id/sick_height"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/sick_weight"/>
                <TextView
                    android:id="@+id/sick_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/sick_bloodtype"/>
                <TextView
                    android:id="@+id/sick_bloodtype"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sick_medicalhistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/colorWrite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/sick_medicalhistory"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/jinru"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sick_allergens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/colorWrite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/sick_allergens"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/jinru"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sick_builtin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/colorWrite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/sick_builtin"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/jinru"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sick_chronic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/colorWrite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/sick_chronic"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/jinru"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sick_surgeryhistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/colorWrite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/sick_surgeryhistory"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/jinru"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>