<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMyBack">

    <include android:id="@+id/my"
        layout="@layout/common_toolbar"/>

    <LinearLayout
        android:id="@+id/my_setting"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@color/colorWrite"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/my_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/ic_launcher"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/my_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/app_zhanwei"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/my_id"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/app_zhanwei"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/my_basic"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@mipmap/jinru"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:background="@color/colorWrite">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@mipmap/jineng"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/my_jineng"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/my_jineng"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@mipmap/jinru"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:background="@color/colorWrite">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@mipmap/techang"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/my_techang"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/my_techang"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@mipmap/jinru"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@color/colorWrite">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@mipmap/shijian"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/my_shijian"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/my_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@mipmap/jinru"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@color/colorWrite">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@mipmap/gongzuo"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/my_gongzuo"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@mipmap/jinru"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <Button
        android:id="@+id/my_out"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/logout_button"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/my_logout"
        android:textSize="18sp"
        android:textColor="@color/colorWrite"/>

</LinearLayout>