<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/myset"
        layout="@layout/my_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:background="@color/colorWrite">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/my_name"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/my_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:background="@null"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="right|center_vertical"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorBackGray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/colorWrite">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/my_sex"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/my_sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:background="@null"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="right|center_vertical"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorBackGray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/colorWrite">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/my_old"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/my_old"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:background="@null"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="right|center_vertical"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorBackGray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/colorWrite">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/my_phone"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/my_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:background="@null"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="right|center_vertical"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorBackGray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:background="@color/colorWrite">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/my_specialty"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/my_specialty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:background="@null"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="right|center_vertical"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorBackGray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/colorWrite">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/my_hospital"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/my_hospital"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:background="@null"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="right|center_vertical"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorBackGray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/colorWrite">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/my_office"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/my_office"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:background="@null"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="right|center_vertical"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorBackGray"/>
    </LinearLayout>

</LinearLayout>